chore: documenting GET operations of api
