# internal/adapters/handlers/student_handler.go
@@ -54,7 +54,7 @@ func RegisterStudentRoutes(s server.IServer, h *StudentHandler) {
 	routesGroup.GET("", h.Search)
 }
 
-// Students godoc
+// StudentCreate godoc
 //
 //	@Summary		Allows you to create a student.
 //	@Description	Allows you to create a student after validating duplicate names.
@@ -98,6 +98,21 @@ func (h *StudentHandler) Create(ectx echo.Context) error {
 	return ReturnResult(ectx, h.StudentCreateUseCase.Execute(ctx, studentCreateInput))
 }
 
+// StudentRead godoc
+//
+//	@Summary		Allows you to get the details of a student.
+//	@Description	Allows you to get the details of a student by ID.
+//	@Tags			students
+//	@Param			x-tenant	header	string	true	"To identify the tenant"
+//	@Param			x-cid		header	string	false	"To identify the request"
+//	@Param			id			path	string	true	"Student identifier"
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	dtos.Result
+//	@Failure		400	{object}	dtos.Result
+//	@Failure		404	{object}	dtos.Result
+//	@Failure		500	{object}	dtos.Result
+//	@Router			/students/{id} [get]
 func (h *StudentHandler) Read(ectx echo.Context) error {
 	span, ctx := h.Tracer.NewRootSpan(ectx.Request(), tracer.StudentHandlerRead)
 	defer span.End()
@@ -188,6 +203,21 @@ func (h *StudentHandler) Delete(ectx echo.Context) error {
 	return ReturnResult(ectx, h.StudentDeleteUseCase.Execute(ctx, studentId))
 }
 
+// StudentSearch godoc
+//
+//	@Summary		Allows you to search the students.
+//	@Description	Allows you to search for students by controlling pagination, sorting and filtering results.
+//	@Tags			students
+//	@Param			x-tenant	header	string					true	"To identify the tenant"
+//	@Param			x-cid		header	string					false	"To identify the request"
+//	@Param			pagination	query	dtos.PaginationInput	true	"Pagination and sorting"
+//	@Param			filter		query	dtos.Filter				false	"Filters"
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	dtos.Result
+//	@Failure		400	{object}	dtos.Result
+//	@Failure		500	{object}	dtos.Result
+//	@Router			/students [get]
 func (h *StudentHandler) Search(ectx echo.Context) error {
 	span, ctx := h.Tracer.NewRootSpan(ectx.Request(), tracer.StudentHandlerSearch)
 	defer span.End()
